styles.css
body {
  width: 100%;
  height: 100%;
  background-color: #233142;
  color: #f95959;
}

.main {
  position: fixed;
  top: 30%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-family: "Poppins", sans-serif;
  text-align: center;
  width: 100%;
}

.heading {
  font-size: 25px;
  color: #e3e3e3
}

.container {
  width: 90%;
  margin: auto;
  border: 5px solid #e3e3e3;
  border-radius: 20px;
  overflow: hidden;
  height: 75px;
}

.text {
  font-weight: 600;
  font-size: 20px;
  color: #f95959;
  -webkit-animation-name: change;
  -webkit-animation-iteration-count: infinite;
  animation-name: change;
  animation-iteration-count: infinite;
  animation-duration: 10s;
}

@keyframes change {
  0%,
  12.66%,
  100% {
    transform: translate3d(0, 0, 0);
  }
  12.66%,
  29.32% {
    transform: translate3d(0, -27%, 0);
  }
  33.32%,
  45.98% {
    transform: translate3d(0, -55%, 0);
  }
  49.98%,
  62.64% {
    transform: translate3d(0, -83%, 0);
  }
  66.64%,
  79.3% {
    transform: translate3d(0, -55%, 0);
  }
  83.3%,
  95.96% {
    transform: translate3d(0, -27%, 0);
  }
}

/* Small Screens */
@media all and (min-width: 480px) {
  .container {
    width: 92%;
  }

  .text {
    font-size: 25px;
  }
  
  @keyframes change {
    0%,
    12.66%,
    100% {
      transform: translate3d(0, 0, 0);
    }
    12.66%,
    29.32% {
      transform: translate3d(0, -30%, 0);
    }
    33.32%,
    45.98% {
      transform: translate3d(0, -58%, 0);
    }
    49.98%,
    62.64% {
      transform: translate3d(0, -87%, 0);
    }
    66.64%,
    79.3% {
      transform: translate3d(0, -58%, 0);
    }
    83.3%,
    95.96% {
      transform: translate3d(0, -30%, 0);
    }
  }
}

/* Medium Screens */
@media all and (min-width: 768px) {
  .container {
    width: 72%;
  }

  .text {
    font-size: 30px;
  }

  @keyframes change {
    0%,
    12.66%,
    100% {
      transform: translate3d(0, 0, 0);
    }
    12.66%,
    29.32% {
      transform: translate3d(0, -33%, 0);
    }
    33.32%,
    45.98% {
      transform: translate3d(0, -61%, 0);
    }
    49.98%,
    62.64% {
      transform: translate3d(0, -90%, 0);
    }
    66.64%,
    79.3% {
      transform: translate3d(0, -61%, 0);
    }
    83.3%,
    95.96% {
      transform: translate3d(0, -33%, 0);
    }
  }
}

/* Large Screens */
@media all and (min-width: 992px) {
  .container {
    width: 75%;
  }

  .text {
    font-size: 40px;
  }

  @keyframes change {
    0%,
    12.66%,
    100% {
      transform: translate3d(0, 0, 0);
    }
    12.66%,
    29.32% {
      transform: translate3d(0, -37%, 0);
    }
    33.32%,
    45.98% {
      transform: translate3d(0, -65%, 0);
    }
    49.98%,
    62.64% {
      transform: translate3d(0, -92%, 0);
    }
    66.64%,
    79.3% {
      transform: translate3d(0, -65%, 0);
    }
    83.3%,
    95.96% {
      transform: translate3d(0, -37%, 0);
    }
  }
}

/* Extra Large Screens */
@media all and (min-width: 1200px) {
  .container {
    width: 60%;
  }
}

/* Extra Extra Large Screens */
@media all and (min-width: 1500px) {
  .container {
    width: 50%;
  }
}

